--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -2,17 +2,17 @@
 $header-height: 56px;
 $header-bg-left: #153aff;
 $header-bg-right: #8dd6ff;
-$heder-bg: #191b27;
+$heder-bg: #ffffff;
 
 /* sidebar */
 $sidebar-menu-width: 74px;
-$sidebar-menu-bg: #191b27;
+$sidebar-menu-bg: #ffffff;
 $sidebar-menu-active-bg: #43454f;
 $sidebar-menu-color: #a3a4a9;
 $sidebar-menu-active-color: #fff;
 $sidebar-menu-content-width: 320px;
 
-$sub-content-bg: #43454f;
+$sub-content-bg: #ffffff;
 
 /* main */
 $main-bg: #f5f5f7;
