🌈 style: 调整页面样式

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,21 +1,8 @@
-/* header */
+$main-bg-color: #ffffff;
+
+$border-color: #e6e6e6;
+
 $header-height: 50px;
-$header-bg-left: #153aff;
-$header-bg-right: #8dd6ff;
-$heder-bg: #ffffff;
-
-/* sidebar */
 $sidebar-menu-width: 65px;
-$sidebar-menu-bg: #ffffff;
-$sidebar-menu-active-bg: #43454f;
-$sidebar-menu-color: #a3a4a9;
-$sidebar-menu-active-color: #fff;
 $sidebar-menu-content-width: 320px;
-
-$sub-content-bg: #ffffff;
-
-/* main */
-$main-bg: #f5f5f7;
-
-/* preview */
 $config-panel-width: 320px;
