🌈 style: 菜单面板和属性面板添加滚动，修改eslint配置文件

--- a/src/views/home/index.scss
+++ b/src/views/home/index.scss
@@ -55,6 +55,7 @@
     .menu-content {
       width: $sidebar-menu-content-width;
       padding: 20px 15px;
+      overflow-y: scroll;
       background: $main-bg-color;
       border-right: 1px solid $border-color;
       transition: all 0.3s;
@@ -97,6 +98,7 @@
     width: $config-panel-width;
     height: 100%;
     padding: 20px 15px;
+    overflow-y: scroll;
     background: $main-bg-color;
     border-left: 1px solid $border-color;
     transition: all 0.3s;
