✨ feat: 增加添加普通文本和竖排文本

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -26,5 +26,8 @@
     align-items: center;
     background: $sub-bg-color;
     cursor: pointer;
+    &.active {
+      background: #edf9ff;
+    }
   }
 }
