--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -31,3 +31,15 @@
     }
   }
 }
+
+.attr-box {
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  .label {
+    flex: 1;
+  }
+  .content {
+    flex: 4;
+  }
+}
