--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -43,3 +43,12 @@
     flex: 4;
   }
 }
+
+.transparent-bg {
+  background-size: 10px 10px;
+  background-position:
+    0 0,
+    15px 15px;
+  background-image: linear-gradient(45deg, #eee 25%, transparent 0, transparent 75%, #eee 0, #eee),
+    linear-gradient(45deg, #eee 25%, #fff 0, #fff 75%, #eee 0, #eee);
+}
