--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import './reset.scss';
+@import './tailwindcss.scss';
 @import './common.scss';
 @import './element.scss';
 
@@ -6,13 +7,13 @@ html,
 body {
   height: 100%;
   font-family: 'Microsoft YaHei-Regular', 'Microsoft YaHei';
-  font-size: 14px;
 }
 
 #app {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  font-size: 14px;
 }
 
 ::-webkit-scrollbar {
